[project]
name = "inkswarm-detectlab"
version = "0.0.0"
description = "Inkswarm DetectLab — reproducible event telemetry + leakage-aware datasets for detection experiments."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Usul"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.9",
  "nbclient>=0.10",
  "ipykernel>=6.29",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]

[project.scripts]
detectlab = "inkswarm_detectlab.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
